k8s/apps/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: redbus-prod
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
