k8s/apps/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redbus-ingress
  namespace: redbus-prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb 
  rules:
    - http:
        paths:
          - path: /api  
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /    
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
